--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ flask
 requests
 gunicorn
 python-dotenv
-pytz               # For timezone handling
-certifi            # For SSL support in requests
+pytz
+certifi
